<resources>
    <string name="app_name">Hotel Imperial</string>
    <string name="titulo_home">Home</string>
    <string name="titulo_hotel">Hotel</string>
    <string name="titulo_reserva">Reserva</string>
    <string name="titulo_servicos">Serviços</string>
    <string name="titulo_acomodacoes">Acomodações</string>
    <string name="titulo_explore">Explore</string>
    <string name="titulo_contato">Contato</string>
    <string name="titulo_login">Login</string>
    <string name="titulo_logoff">Logoff</string>
    <string name="titulo_minha_conta">Minha Conta</string>
    <string name="titulo_acesso">Acesso</string>
    <string name="titulo_usuario">Usuário</string>
    <string name="titulo_midias">Mídias Sociais</string>
    <string name="titulo_sair">Fechar App</string>
    <string name="txt_sair">Sair</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_instagram">Instagram</string>
    <string name="txt_twitter">Twitter</string>
    <string name="txt_creditos">APP desenvolvido por Darlan Araujo</string>
    <string name="txt_convida">Comemorando mais de 70 anos de hospitalidade, o Hotel Imperial é uma
        empresa família de hotéis localizado na cidade de Porto Seguro que oferece acomodações para
        todos os tipos de viajantes. Veja conhecer!</string>
    <string name="txt_abrir_navegacao">Abrir Navegação</string>
    <string name="txt_fechar_navegacao">Fechar Navegação</string>
    <string name="txt_menu">Menu</string>
    <string name="txt_buscar">Buscar</string>
    <string name="txt_hotel">O Hotel Imperial convida você a conhecer a nossa história!</string>
    <string name="txt_texto_hotel">
        Temos o orgulho em estar entre os <b>06 melhores hotéis no litoral do Brasil</b>. Resultado
        de seriedade, profissionalismo e excelência da nossa equipe altamente qualificada para
        atender hóspedes a lazer ou negócios, tornando sua estadia uma experiência inesquecível.
        \n\n
        Somos o primeiro hotel da orla de Porto Seguro, localizado no centro. Descubra o <b>Hotel
        Imperial Peixoto Araujo</b>, a poucos passos de farmácias, grandes redes mundiais de fast food,
        bancos, aeroporto e afins.
        \n\n
        Oferecemos apartamentos inteiramente equipados para seu conforto, salas de reuniões, suítes
        especiais, hidromassagem aquecida, piscina adulto e infantil, academia climatizada, salão
        de jogos, serviço de mensageiro com depósito de bagagem, room service e, para os amantes da
        boa gastronomia, um cardápio exclusivo assinado pelo chef Luciano Muradas.
        \n\n
        Junto a nossa infraestrutura, possuímos uma Boutique charmosa que oferece o conforto em
        adquirir peças onde remeta uma excelente recordação da sua viagem.</string>
    <string name="titulo_cidade">A CIDADE</string>
    <string name="txt_cidade">
        Com mais de 140 mil habitantes, <b>Porto Seguro</b> é a porta de entrada do Nordeste brasileiro,
        são aproximadamente 85 km de belas praias. O destino é privilegiado por sua localização
        geográfica mundialmente conhecida como <b>“Terra Mãe do Brasil”</b>.
        \n\n
        Representamos uma vasta riqueza histórica e cultural, aqui você encontra o <b>primeiro santuário
        do Brasil</b>, o centro histórico no alto da cidade onde mantem viva a origem do povo brasileiro,
        além claro, da <b>Reserva Indígena Pataxó da Jaqueira</b> com sua cultura que permite o contato
        único com as tradições dos mais antigos povos do Brasil.
        \n\n
        Como tanta diversidade <b>Porto Seguro</b> é um destino capaz de exceder as expectativas de
        qualquer visitante.
    </string>
    <string name="txt_venha">Venha nos Visitar!</string>
    <string name="titulo_fazer_reserva">FAZER RESERVA</string>
    <string name="txt_voltar">Voltar</string>
    <string name="txt_entrar">Entrar</string>
    <string name="txt_cadastrar">Ainda não é cadastrado?</string>
    <string name="titulo_cadastrar">Cadastrar-se</string>
    <string name="servico_quarto">
        O requinte e a exclusividade do <b>Hotel Imperial</b> fica ainda melhor com os serviços
        de quarto oferecidos nos apartamentos. Nós disponibiliza aos hóspedes a opção de room service.
        \n\n
        Assim, além de desfrutar do sistema All-Inclusive com bares e restaurante principal com a
        <b>alta gastronomia</b>, os viajantes também podem curtir o conforto dos apartamentos sem
        deixar de experimentar pratos deliciosos.
        \n
    </string>
    <string name="titulo_crabralia">SANTA CRUZ CABRÁLIA</string>
    <string name="texto_cabralia">
        Município onde foi realizada a <b>primeira missa do Brasil em 1.500</b>. \n
        Oferece 35 km de <b>praias semi desertas com águas límpidas</b>, que formam piscinas naturais e
        são protegidas por recifes. \n
        Na parte alta da cidade o visitante faz um verdadeiro passeio pela história do país,
        apreciando <b>construções históricas dos séculos XVII e XVIII</b>. Localizado a 20 quilômetros de
        Porto Seguro.
    </string>
    <string name="titulo_coroa">PRAIA DE COROA VERMELHA</string>
    <string name="texto_coroa">
        Um verdadeiro <b>paraíso de águas mornas e rasas</b>. Onde é possível nadar com os peixes. \n
        Ideal para descanso, tranquila e limpa. É uma praia peculiar, parte dela tem o mar mais
        agitado e outra metade parece uma piscina, <b>ótimo para crianças</b>. \n
        O local possui quiosques na beira da praia e uma visão deslumbrante da natureza. \n
        Cheia de coqueiros e artesanato indígenas. Localizada no município de <b>Santa Cruz Cabrália</b>,
        distante 14 quilômetros de <b>Porto Seguro</b> é também um local cheio de história, onde foi
        celebrada a <b>primeira missa no Brasil</b>.
    </string>
    <string name="titulo_arraial">ARRAIAL D’AJUDA</string>
    <string name="texto_arraial">
        Distante 10 minutos de balsa de Porto Seguro, na travessia pelo Rio Bunharém, o centro de
        <b>Arraial d’Ajuda</b> é mais um dos atrativos conhecido por suas <b>belezas naturais e históricas</b>. \n
        O distrito abriga a <b>igreja da padroeira Nossa Senhora d’Ajuda</b> construída em 1549. \n
        Inclui praias bem estruturadas, com movimento e bastante curtição. Também tem as quase
        desertas, pouca estrutura, perfeitas para contato com a natureza. \n
        A noite reúne o público jovem e animado.
    </string>
    <string name="titulo_trancoso">TRANCOSO</string>
    <string name="texto_trancoso">
        Destino dos famosos, como artistas nacionais e internacionais, esse distrito de Porto
        Seguro, tem as mais <b>lindas praias do sul da Bahia</b>. \n
        A <b>Praça São João</b>, chamada de <b>Quadrado</b>, faz parte do <b>centro histórico de Trancoso</b>, onde
        estão às casinhas coloridas da época da colonização e que são cartão postal da cidade,
        além da igreja. \n
        Tudo cercado de natureza exuberante com árvores centenárias, sendo este o destino
        considerado uns dos <b>15 melhores lugares do mundo para se visitar</b>. \n
        “Sorria gostoso, você está em Trancoso”.
    </string>
    <string name="titulo_quarto1">SUÍTE MASTER COM BANHEIRA</string>
    <string name="txt_detalhes">DETALHES DO QUARTO</string>
    <string name="txt_contato">Sinta-se a vontade para nos enviar suas sugestões, críticas ou
        elogios. \n
        Envie também suas dúvidas, responderemos o mais breve possível.</string>
    <string name="titulo_entrada">ENTRADA</string>
    <string name="titulo_saida">SAÍDA</string>
    <string name="titulo_aplicar">CONFIRMAR</string>
    <string name="titulo_escolha_quarto">ESCOLHA O QUARTO DESEJADO</string>
    <string name="titulo_quarto2">SUÍTE KING COM VARANDA</string>
    <string name="titulo_quarto3">SUÍTE DUPLEX</string>
    <string name="titulo_opcao_quarto1">SUÍTE MASTER</string>
    <string name="titulo_opcao_quarto2">SUÍTE KING</string>
    <string name="titulo_opcao_quarto3">SUÍTE DUPLEX</string>
    <string name="txt_duvida_quarto">Está com dúvida sobre os quartos?</string>
    <string name="titulo_saiba_mais">SAIBA MAIS!</string>
    <string name="txt_limpar">Limpar</string>
    <string name="txt_serv_bar">Com isso, além das principais refeições diárias, você terá coberto pelo sistema o consumo livre de bebidas (alcoólicas ou não), petiscos, lanches e até mesmo atrações disponíveis no resort, dependendo do pacote escolhido.</string>
    <string name="txt_serv_yoga">Que tal você assistir o nascer do sol na icônica Praia de Porto Seguro enquanto pratica uma aula de yoga e meditação, mantendo distanciamento, obviamente, e depois se deleitar com um reforçado café da manhã?</string>
    <string name="txt_serv_sauna">No Hotel Imperial disponibilizamos uma sauna natural ( 47 ° à 53°). Nossa sauna é mista e aproximadamente cabem 10 pessoas. Você pode desfrutar também do nosso ofurô que tem a capacidade pra 20 pessoas.</string>
    <string name="txt_serv_cafe">O café da manhã do Hotel Imperial é a maneira mais deliciosa de começar um dia bem disposto para o lazer ou para o trabalho.   O espaço , tranquilo, aconchegante e com um ótimo atendimento, o deixará à vontade para desfrutar a variedade de nosso buffet. Oferecemos produtos caseiros, preparados no próprio hotel, como bolos, pães,  diversos salgados e doces.</string>
    <string name="txt_quarto">Quarto Escolhido</string>
    <string name="txt_serv_academia">Quem mantém uma rotina de exercícios normalmente sente falta disso durante as viagens, sejam elas de lazer ou corporativas. Se você faz parte desse público que valoriza o bem-estar, uma boa academia em hotel faz diferença, não é? Nosso Hotel conta com uma academia aparelhada e com um personal exclusivo para os nossos hospedes.</string>
    <string name="txt_serv_baby">Pensando na praticidade e conforto das mamães e papais que viajam com crianças pequenas, criamos nossa Copinha Baby, oferecendo um espaço aconchegante para amamentar, esquentar a papinha, fazer o mama, trocar e até mesmo dar banho nos pequenos!</string>
    <string name="txt_serv_jogos">O Hotel Imperial entende que o lazer e bem-estar dos nossos hospedes se dá dentro e fora do nosso espaço. Pensando nisso oferecemos aos nosso hospedes a opção de lazer em nossa sala de jogos. Aqui você tem diversas opções de lazer individual ou em grupo. Junte a família ou faça novos amigos.</string>
    <string name="txt_serv_lazer">"O Hotel Imperial conta com uma espaçosa área de lazer para nossos hospedes, piscina adulta e infantil com toboagua, restaurante e um bar na beira da piscina, sauna, sala de jogos, área verde e na saída do nosso hotel uma linda vista para o mar... Aqui você encontra tudo que precisa para você e sua família desfrutar de grandes momentos de diversão, aventura e prazer!  "</string>
    <string name="txt_serv_restaurante">O Hotel Imperial, convida você a desacelerar o ritmo do dia a dia e saborear um pouco da gastronomia baiana por meio de todos os sentidos. Com ambiente amplo e aconchegante nossa cozinha recebe você para experiência gastronômica que reverencia o bem-estar e a sustentabilidade. Opções criativas e saudáveis elaboradas pelo chef e sua equipe. O cardápio destaca a culinária do nosso litoral, comprometida com o meio ambiente e sua qualidade de vida sem perder o sabor.</string>

</resources>