<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPrincipal">

    <ImageView
        android:id="@+id/imageFundo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_fundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageFundoCor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_fundo_cor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginTop="36dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icone_g"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageTitulo1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/titulo1"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="@+id/imageTitulo2"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/imageTitulo2"
        app:layout_constraintTop_toTopOf="@+id/imageLogo"
        app:layout_constraintVertical_bias="0.206" />

    <ImageView
        android:id="@+id/imageTitulo2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/titulo2"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="@+id/imageLogo"
        app:layout_constraintVertical_bias="0.694" />

    <ScrollView
        android:id="@+id/fundoRolagem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:columnCount="2"
                android:orientation="horizontal"
                android:rowCount="3">

                <ImageButton
                    android:id="@+id/btnHotel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/titulo_hotel"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_hotel" />

                <ImageButton
                    android:id="@+id/btnReserva"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/titulo_reserva"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_reserva" />

                <ImageButton
                    android:id="@+id/btnServicos"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/titulo_servicos"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_servico" />

                <ImageButton
                    android:id="@+id/btnAcomodacoes"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/titulo_acomodacoes"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_acomodacoes" />

                <ImageButton
                    android:id="@+id/btnExplore"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/titulo_explore"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_explore" />

                <ImageButton
                    android:id="@+id/btnContato"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/titulo_contato"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_contato" />
            </GridLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/banner_wifi" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/banner_jogos" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/banner_fumante" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/banner_baby" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:alpha="50"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icone_g" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/txt_convida"
                    android:textAlignment="inherit"
                    android:textColor="@color/padrao" />

                <ImageView
                    android:id="@+id/imgSlide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/slide_fotos" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/padrao"
                    android:gravity="center|center_vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/txt_creditos"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>